# PADS

./: CirclePack.py  Eratosthenes.py  Lyndon.py  README.md  SVG.py  Util.py  default.nix  post2to3.patch  pyproject.toml  setup.py
.github/workflows/: subtree-sync.yml  test-build.yml
PADS/: Permutations.py  SVG.py  Sudoku.py
